--- a/trunk/PreguntasFuncionalidad1/Bibliografia.bib
+++ b/trunk/PreguntasFuncionalidad1/Bibliografia.bib
@@ -5,3 +5,11 @@
 @misc(odmgapi, key="odmgapi",
     title="{ODMG API}",
     howpublished="\url{http://db.apache.org/ojb/docu/tutorials/odmg-tutorial.html#Persisting+New+Objects}")
+
+@misc(manifest, key="manifest",
+    title="Manifiesto {M}alcolm {A}tkinson: características de un {BDOO}",
+    howpublished="\url{http://www.cs.cmu.edu/afs/cs.cmu.edu/user/clamen/OODBMS/Manifesto/htManifesto/Manifesto.html}")
+
+@misc(ventajas, key="ventajas",
+    title="Why Aren't You Using An OODBMS",
+    howpublished="\url{http://www.25hoursaday.com/WhyArentYouUsingAnOODBMS.html}")
