--- a/trunk/PreguntasFuncionalidad1/Preguntas.tex
+++ b/trunk/PreguntasFuncionalidad1/Preguntas.tex
@@ -47,8 +47,12 @@
 \pagenumbering{arabic}
 \pagestyle{fancy}
 
-\input{Pregunta1}
-
+\section{Preguntas seleccionadas}
+\input{Pregunta1}\newpage
+\input{Pregunta3}\newpage
+\section{Preguntas descartadas}
+\input{Pregunta2}\newpage
+\input{Pregunta4}
 
 \newpage
 % Bibliograf\'ia 
