--- a/PreguntasFuncionalidad1/Pregunta4.tex
+++ b/PreguntasFuncionalidad1/Pregunta4.tex
@@ -1,3 +1,11 @@
 \paragraph{Pregunta:} ¿Qué ventajas ofrece un sistema gestor de bases de datos orientadas a objetos frente a un sistema clásico relacional? \cite{ventajas}
 
-\paragraph{Respuesta:}  
+\paragraph{Respuesta:} 
+\begin{milista}
+\item Los objetos en la OODMBS pueden almacenar un número arbitrario de tipos atómicos, así como otros objetos.
+\item Los datos en el mundo real tienen habitualmente características jerárquicas.
+\item No es necesario un lenguaje de consultas para acceder a datos de la OODB, al contrario que ocurre con RDB, ya que la interacción con la base de datos es transparente al acceder a los objetos.
+\item En una aplicación típica que usa un lenguaje de programación orientado a objetos y un RDMS se necesita bastante tiempo en "`mapear"' las tablas a partir de los objetos.
+\item No hay claves primarias.
+\item Un modelo de datos debería modelar entidades y sus relaciones, restricciones y operaciones que cambian el estado de los datos en el sistema.
+\end{milista}
