--- a/trunk/PreguntasFuncionalidad1/Pregunta3.tex
+++ b/trunk/PreguntasFuncionalidad1/Pregunta3.tex
@@ -1,7 +1,7 @@
 \paragraph{Pregunta:} En el documento se comentan algunas características de los SGBDOR, pero no se mencionan las de un SGBDOO. ¿Cuáles son las características que debe un cumplir un SGBDOO para que sea considerado como tal?
 
 \paragraph{Respuesta:} En 1989 se hizo el Manifiesto \cite{manifest} de los sistemas de base de datos orientados a objetos el cual propuso trece características obligatorias para un SGBDOO y cuatro opcionales, las cuales son:
-\begin{itemize}
+\begin{milista}
 \item Características obligatorias de orientación a objetos:
 \begin{enumerate}
 \item Deben soportarse objetos complejos
@@ -28,4 +28,4 @@
 \item Sistema de base de datos distribuido
 \item Soporte de versiones
 \end{enumerate}
-\end{itemize}
+\end{milista}
