--- a/trunk/Funcionalidad3/Bibliografia.bib
+++ b/trunk/Funcionalidad3/Bibliografia.bib
@@ -10,4 +10,13 @@
     title="{Página Web oficial de LORE}",
     howpublished="\url{http://infolab.stanford.edu/lore/}")   
 
-   
+
+@article {oem, key="oem",
+   author =	 "{Roy Goldman, Sudarshan Chawathe, Arturo Crespo, Jason McHugh}",
+   title = 	 "{A Standard Textual Interchange Format for the Object Exchange Model (OEM)}",
+   biburl = "\url{http://infolab.stanford.edu/~mchughj/oemsyntax/oemsyntax.html}"}
+}
+ 
+@misc(xml, key="xml",
+    title="{Extensible Markup Language (XML)}",
+    howpublished="\url{http://www.w3.org/XML/}") 
