--- a/Funcionalidad3/Funcionalidad3.tex
+++ b/Funcionalidad3/Funcionalidad3.tex
@@ -103,7 +103,7 @@
 
 % Añadimos la bibliografia al índice
 \clearpage\phantomsection
-\addcontentsline{toc}{section}{\bibname}
+\addcontentsline{toc}{section}{Referencias}
 
 % Bibliografía. En este caso se usa BibTeX
 \bibliographystyle{plain}
