--- a/Funcionalidad3/OrdenesArticle.sty
+++ b/Funcionalidad3/OrdenesArticle.sty
@@ -115,6 +115,15 @@
 	\let\ps@fancy\ps@plain % Con esto, si no se carga el paquete fancy, se toma el estilo plano y no da fallo 
 \fi
 
+% Salto de línea tras título de secciones \paragraph
+\makeatletter % necesario para que reconozca a '@' como carácter normal
+\renewcommand{\paragraph}{\@startsection{paragraph}{4}{\z@}{-3.25ex \@plus
+-1ex \@minus -.2ex}{1.5ex \@plus .2ex}{\normalfont\large\bfseries}}
+\makeatother % necesario para que restablezca '@' como carácter especial
+
+% Mostrar en el índice hasta el nivel de \paragraph
+\setcounter{tocdepth}{4}
+
 % \'Ordenes para ajustar los m\'argenes del documento
 \setlength{\headheight}{15pt} 
 \setlength{\headsep}{8mm}
