--- a/trunk/Funcionalidad3/Bibliografia.bib
+++ b/trunk/Funcionalidad3/Bibliografia.bib
@@ -20,3 +20,21 @@
 @misc(xml, key="xml",
     title="{Extensible Markup Language (XML)}",
     howpublished="\url{http://www.w3.org/XML/}") 
+
+@book {libro-dedales, key="libro-dedales",
+   author =	 "Thomas M. Connolly, Carolyn E. Begg",
+   title = 	 "Sistemas de bases de datos. Un enfoque práctico para diseño, implementación y gestión",
+   publisher = "`Pearson. Addison Wesley"',
+   year = 2005
+ }
+ 
+@book {piattini, key="piattini",
+   author =	 "Mario Piattini, Oscar Díaz",
+   title = 	 "Advanced Database Technology and Design",
+   publisher = "`Artech House"',
+   year = "`2000"'
+ }
+ 
+@misc(rae-multimedia, key="rae-multimedia",
+    title="{Definición de {M}ultimedia}",
+    howpublished="\url{http://buscon.rae.es/draeI/SrvltGUIBusUsual?TIPO_HTML=2&TIPO_BUS=3&LEMA=multimedia}")  
