--- a/Funcionalidad3/Funcionalidad3.tex
+++ b/Funcionalidad3/Funcionalidad3.tex
@@ -16,7 +16,7 @@
 \usepackage{color}
 \usepackage{ifthen}
 \usepackage{longtable}
-\hypersetup{bookmarksopen,bookmarksopenlevel=4,linktocpage,colorlinks,urlcolor=blue,citecolor=blue,
+\hypersetup{bookmarksopen,bookmarksopenlevel=3,linktocpage,colorlinks,urlcolor=blue,citecolor=blue,
 						linkcolor=blue,filecolor=blue,pdfnewwindow,
 						pdftitle={Funcionalidad 3},
 						pdfauthor={Juan Andrada Romero, Juan José Antequera Flores, Jose Domingo López López},
@@ -100,6 +100,10 @@
 
 \input{PrimeraMitadWeb.tex}
 \input{SegundaMitadWeb.tex}
+\clearpage
+\input{DosMitadesMultimedia.tex}
+\clearpage
+\input{Comparativa.tex}
 
 % Añadimos la bibliografia al índice
 \clearpage\phantomsection
