--- a/Funcionalidad3/Portada.tex
+++ b/Funcionalidad3/Portada.tex
@@ -10,7 +10,7 @@
   \vspace{14mm}
   {\Large \textsf{\textsc{Funcionalidad 3}}} \\
   \vspace{4mm}
-  {\LARGE \textsf{\textsc{Bases de Datos Multimedia y Bases de Datos Web}}}\\
+  {\LARGE \textsf{\textsc{Bases de Datos Web y Bases de Datos Multimedia}}}\\
   \vspace{15mm}
   {\large Juan Andrada Romero} \\
   {\large Juan José Antequera Flores} \\
