- Añadida las referencias para las preguntas

--- a/PreguntasFuncionalidad4/Preguntas.tex
+++ b/PreguntasFuncionalidad4/Preguntas.tex
@@ -49,5 +49,13 @@
 
 \input{Contenido.tex}
 
+\newpage
+% Bibliograf\'ia 
+\bibliographystyle{plain}
+\pagestyle{plain} 
+\bibliography{Bibliografia}
+
+
+
 \end{document}
 
