--- a/trunk/PreguntasFuncionalidad4/Preguntas.tex
+++ b/trunk/PreguntasFuncionalidad4/Preguntas.tex
@@ -49,5 +49,13 @@
 
 \input{Contenido.tex}
 
+\newpage
+% Bibliograf\'ia 
+\bibliographystyle{plain}
+\pagestyle{plain} 
+\bibliography{Bibliografia}
+
+
+
 \end{document}
 
