--- a/PreguntasFuncionalidad4/Contenido.tex
+++ b/PreguntasFuncionalidad4/Contenido.tex
@@ -20,3 +20,9 @@ En sistemas de comercio electrónico en particular, así como en sistemas que mane
 
 
 \clearpage
+
+\paragraph{Pregunta} En el trabajo se habla de los departamentos de una organización como productor de información, pero los productores pueden ser externos a nuestra organización. Esto representa un problema debido a la falta de heterogeneidad en la estructuración de los datos en los almacenes de datos. ¿Es posible procesar los datos de manera automática una vez obtenidos los mismos?
+
+\paragraph{Respuesta} No es posible procesar de manera automática datos porque la representación de los mismos (diminutivos en los nombres, campos compuestos representados como uno solo, etc) depende fuertemente de la base de datos en la que estén almacenados. Por tanto antes de adoptar los datos externos es necesario conocer detalladamente la estructura del almacén del que extraeremos la informacion para seleccionar las correspondencias de los campos de varios almacenes para poder hacer una fusión lo más heterogenea posible.
+
+\clearpage
