--- a/PreguntasFuncionalidad4/Preguntas.tex
+++ b/PreguntasFuncionalidad4/Preguntas.tex
@@ -17,7 +17,7 @@
 \hypersetup{bookmarksopen,bookmarksopenlevel=3,linktocpage,colorlinks,urlcolor=blue,citecolor=blue,
 						linkcolor=blue,filecolor=blue,pdfnewwindow,
 						pdftitle={Listado de preguntas Funcionalidad 4}, 
-						pdfauthor={Juan Andrada Romero, Juan José Antequera Flores},
+						pdfauthor={Juan Andrada Romero, Juan José Antequera Flores, José Domingo López López},
 						pdfsubject={Modelos Avanzados de Base de Datos}}
 
 
